Finalizado o notebook "Strings" 	Correção de erros no README e em todos os notebooks 	Criada pasta para colocar os notebooks

--- a/notebooks/Números complexos e racionais.ipynb
+++ b/notebooks/Números complexos e racionais.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "\n",
     "## Números complexos\n",
-    "Até hoje nunca necessitei de utilizar números complexos e também nunca tive a oportunidade de os aprender na escola. No entanto, fiquei curioso e encontrei uma playlist incrível no youtube que explica de onde surgiram e como funcionam. Deixo aqui o [link](https://www.youtube.com/playlist?list=PLiaHhY2iBX9g6KIvZ_703G3KJXapKkNaF) e recomendo a todos a verem."
+    "Até hoje nunca necessitei de utilizar números complexos e também nunca tive a oportunidade de os aprender na escola. No entanto, fiquei curioso e encontrei uma playlist incrível no youtube que explica de onde surgiram e como funcionam. Deixo aqui o [link](https://www.youtube.com/playlist?list=PLiaHhY2iBX9g6KIvZ_703G3KJXapKkNaF) e recomendo a todos verem."
    ]
   },
   {
@@ -21,7 +21,7 @@
    "source": [
     "Se eu tiver este número: $5 + 3i$ - Eu sei que ele é um número complexo e terá uma parte real e outra imaginária. No caso a parte real é o número $5$ e a parte imaginária é o número $3$.\n",
     "\n",
-    "Em Julia, em vez do $i$ iremos usar o $im$, referente à parte imaginária que na realidade representa: $\\sqrt{-1}$."
+    "Em Julia, em vez do $i$ iremos usar o `im`, referente à parte imaginária que na realidade representa: $\\sqrt{-1}$."
    ]
   },
   {
@@ -142,12 +142,12 @@
    "id": "8bb6b4cb-d76f-4d37-b857-1e907739756e",
    "metadata": {},
    "source": [
-    "O conjugado de um número complexo (basicamente é trocar o sinal da parte imaginária, fazendo com que o vetor que representa o número complexo no plano complexo, mantenha a magnitude e que o ângulo fase seja invertido).\n",
+    "O conjugado de um número complexo (basicamente é trocar o sinal da parte imaginária, fazendo com que o vetor que representa o número complexo no plano complexo, mantenha a magnitude e o ângulo fase seja invertido).\n",
     "\n",
     "<img src=\"imagens/conjugado_ilustracao.gif\" alt=\"Imagem ilustrativa do conjugado\">\n",
     "<small>Fonte: <a href=\"https://www.electronics-tutorials.ws/accircuits/complex-numbers.html\" target=\"_blank\">ElectronicsTutorials</a></small><br><br><br><br>\n",
     "\n",
-    "Podemos obtê-lo utilizando a função `conj()`."
+    "Podemos obter o conjugado utilizando a função `conj()`."
    ]
   },
   {
@@ -178,7 +178,7 @@
    "source": [
     "O valor absoluto de um número complexo é a magnitude do vetor que representa o número complexo e pode ser calculado através da função `abs()`.\n",
     "\n",
-    "Porém a função `abs2()` pode ser útil já que ela faz a raiz quadrada do valor absoluto que irá cortar com a raiz de $\\sqrt{-1}$ do $im$."
+    "Porém a função `abs2()` pode ser útil já que ela faz a raiz quadrada do valor absoluto que irá cortar com a raiz de $\\sqrt{-1}$ do `im`."
    ]
   },
   {
