--- a/notebooks/Operações matemáticas.ipynb
+++ b/notebooks/Operações matemáticas.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "id": "8a1caae1-a9f3-48a0-a305-a4e9f6976159",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
        "3//2"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "id": "dd7dbb36-7560-4dc9-9a7f-dede379ebe7d",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "Rational{Int64}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,11 +70,11 @@
     "\n",
     "Eu não uso muito os operadores bitwise (costumo usar mais o booleanos: `||`,`&&` e `!`), mas há 2 operadores que me chamaram a atenção.\n",
     "\n",
-    "O XOR definido por `\\xor+TAB` e o shift lógico `>>>` diferente do shift aritmético à direita `>>`.\n",
+    "O XOR definido por `\\xor+TAB` e o shift lógico `>>>` que é **diferente** do shift aritmético à direita `>>`.\n",
     "\n",
-    "Para diferenciar os o shift lógico do aritmético, gostei da resposta escolhida [aqui](https://stackoverflow.com/questions/44694957/the-difference-between-logical-shift-right-arithmetic-shift-right-and-rotate-r).\n",
+    "Para diferenciar o shift lógico do aritmético, gostei da resposta escolhida [aqui](https://stackoverflow.com/questions/44694957/the-difference-between-logical-shift-right-arithmetic-shift-right-and-rotate-r).\n",
     "\n",
-    "É sempre bom lembrar que shift aritmético à esquerda é o mesmo que multiplicar o número por 2. Já o shift aritmético à direita é o mesmo que dividir o número por 2.\n",
+    "É sempre bom lembrar que shift aritmético à esquerda é o mesmo que multiplicar o número por $2$. Já o shift aritmético à direita é o mesmo que dividir o número por $2$.\n",
     "\n",
     "\n",
     "***Nota: Operações bitwise só funcionam com inteiros!***"
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "id": "22e97f4f-eb27-4b10-97d8-d0ae31781a5f",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 93,
    "id": "d8b77edb-6cd1-4cc7-8981-47db1a94b23a",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,8 @@
     "println( x >> 2)\n",
     "\n",
     "# é o mesmo que x / 2 / 2 / 2, \n",
-    "# só que aqui a parte decimal é descartada devido a só se trabalhar com inteiros\n",
+    "# só que aqui a parte decimal é descartada devido \n",
+    "# a trabalhar-se só com inteiros\n",
     "println( x >> 3)"
    ]
   },
@@ -149,17 +150,19 @@
     "\n",
     "Muitas vezes vamos querer fazer certas operações dentro de arrays e matrizes, por exemplo, fazer o quadrado de todos os elementos de um array. Elevar um array ao quadrado vai disparar um erro, pois matematicamente não faz sentido.\n",
     "\n",
-    "Porém há algo denominado de *broadcasting*. Isto é, ele pega, neste caso, em um escalar ou número e faz uma dada operação, que neste caso é a exponenciação, em cada elemento do array.\n",
+    "Porém há algo denominado de *broadcasting*. \n",
+    "\n",
+    "Isto é, pega-se, neste caso, em um número e faz-se uma dada operação, que neste caso é a exponenciação, em cada elemento do array.\n",
     "\n",
     "`[1,2,3,4] .^ 2` == `[1^2, 2^2, 3^2, 4^2]`\n",
     "\n",
     "\n",
-    "O `.` antes de uma operação  siginfica *broadcasting*, também é chamada de \"dot call\"."
+    "O `.` antes de uma operação  siginfica *broadcasting*, que também é chamada de \"dot call\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "id": "40dee237-8566-4a57-8fa7-3ff397d7a7cc",
    "metadata": {},
    "outputs": [
@@ -173,12 +176,13 @@
        " 256"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Elevar todos os elementos de x à quarta\n",
     "x = [1,2,3,4]\n",
     "\n",
     "x .^ 4"
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "id": "c11b1098-d6b2-4cf6-bd77-f1fb168c7e30",
    "metadata": {},
    "outputs": [
@@ -199,12 +203,13 @@
        " [4, 5]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Matriz 3x2\n",
     "M = [\n",
     "    \n",
     "    [1,2],\n",
@@ -215,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 96,
    "id": "89b04113-b235-4447-8060-878f721c74c7",
    "metadata": {},
    "outputs": [
@@ -226,18 +231,19 @@
        " [1, 2]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Vetor de 2 elementos que neste é uma matriz 1x2\n",
     "v = [ [1,2] ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 97,
    "id": "b1c83aa1-40e8-4f58-938f-a37cc46043fd",
    "metadata": {},
    "outputs": [
@@ -250,7 +256,7 @@
        " [5, 7]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +274,7 @@
    "source": [
     "Para verem como o broadcasting é bom demais, imaginem esta expressão:\n",
     "\n",
-    "$2 \\cdot A^2 + \\sin {A}, A \\in \\mathbb{R}^{m \\times n}$\n",
+    "$2 \\cdot A^2 + \\sin ({A}), A \\in \\mathbb{R}^{m \\times n}$\n",
     "\n",
     "Já estão a imaginar o loop que vão ter de fazer para aplicar todas as aritméticas a cada elemente da matriz $A$ ... Pois é, não vai ser preciso, pois esta sintaxe \"dos pontos\" `.` (prefiro chamar de broadcasting), pode ser aninhada! Ficaria algo deste género:\n",
     "\n",
@@ -292,10 +298,11 @@
     "* Comecemos pelos: 0.0 e -0.0, que são iguais mas 0.0 NÃO é maior que -0.0\n",
     "* Inf é maior que qualquer coisa, exceto NaN\n",
     "* -Inf é menor que qualquer coisa, exceto NaN\n",
-    "* As comparações com NaN são sempre falsas, incluindo com ele mesmo!\n",
+    "* As comparações com NaN são sempre falsas, incluindo com ele próprio!\n",
     "\n",
     "\n",
     "Bem isto do `NaN` é estranho, mas gostaria que pensassem um pouco no seu significado ...\n",
+    "\n",
     "NaN significa ***Not a Number*** (em português, Não é um Número) e agora pensem, quantas coisas podem não ser um número? Várias! Eu não sou um número (para o governo sou, mas esqueçamos isso), o meu quarto não é um número, o planeta não é um número!\n",
     "\n",
     "Ao dizermos `NaN` podemos estar-nos a referir a qualquer coisa que não é um número, e Julia não sabe, pois só referimo-nos a *NaN*."
@@ -303,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 98,
    "id": "2e01805b-108e-4067-9a50-c63b40031b9b",
    "metadata": {},
    "outputs": [
@@ -313,7 +320,7 @@
        "false"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 99,
    "id": "c02339fa-7399-442f-a26b-62ff071fc4f4",
    "metadata": {},
    "outputs": [
@@ -342,7 +349,7 @@
        "true"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 100,
    "id": "a3be767c-1b9a-4581-b3fe-cd0eece1e4b5",
    "metadata": {},
    "outputs": [
@@ -364,7 +371,7 @@
        "true"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 101,
    "id": "bceaf600-9190-4cd9-a339-9592b7463191",
    "metadata": {},
    "outputs": [
@@ -394,7 +401,7 @@
        "true"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 102,
    "id": "35539cc2-e4a1-4182-8daa-43055c05d50c",
    "metadata": {},
    "outputs": [
@@ -425,7 +432,7 @@
        "false"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "id": "7ae2d171-3369-40fc-820b-216bdcafa4e3",
    "metadata": {},
    "outputs": [
@@ -446,7 +453,7 @@
        "true"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 104,
    "id": "223a323c-2e20-4e81-ae5e-774bc8dfae4c",
    "metadata": {},
    "outputs": [
@@ -499,12 +506,12 @@
    "source": [
     "## Cadeia de comparações\n",
     "\n",
-    "Podemos encadear várias comparações sem recorrer ao operador boolean0 `&&` ou, em caso de comparações elemento a elemento, ao operador bitwise `&`."
+    "Podemos encadear várias comparações sem recorrer ao operador booleano `&&` ou, em caso de comparações elemento a elemento, ao operador bitwise `&`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 105,
    "id": "6525befd-4b0f-46b4-9ff7-bea0fbca071a",
    "metadata": {},
    "outputs": [
@@ -514,7 +521,7 @@
        "true"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 106,
    "id": "1dcad16b-abdb-418e-963d-6afe0ec96823",
    "metadata": {},
    "outputs": [
@@ -545,7 +552,7 @@
        " 1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 107,
    "id": "16e33a14-1510-4dc4-9a44-4e6acbbf1720",
    "metadata": {},
    "outputs": [
@@ -586,7 +593,7 @@
        "true"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 108,
    "id": "77db3f80-1c1c-43e4-8435-2eb692e43b52",
    "metadata": {},
    "outputs": [
@@ -627,7 +634,7 @@
        "true"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 109,
    "id": "2312f202-e5eb-4474-bf66-bb71a79314f5",
    "metadata": {},
    "outputs": [
@@ -662,7 +669,7 @@
        "11"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 110,
    "id": "115012c6-f216-4f32-abfe-6c8a016b9066",
    "metadata": {},
    "outputs": [
@@ -684,7 +691,7 @@
        "12"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 111,
    "id": "92379b41-d209-477a-b017-572770cfd7ca",
    "metadata": {},
    "outputs": [
@@ -716,7 +723,7 @@
        ":right"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 112,
    "id": "98dc7d7a-e573-4fa9-bd5d-c983a9715560",
    "metadata": {},
    "outputs": [
@@ -738,7 +745,7 @@
        ":none"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 113,
    "id": "93ae1c1c-5de8-44d0-8ecf-a80d3fb76aaa",
    "metadata": {},
    "outputs": [
@@ -760,7 +767,7 @@
        ":left"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 114,
    "id": "5016f1a7-eefd-41b2-a71c-0ccb9f555a4c",
    "metadata": {},
    "outputs": [
@@ -796,7 +803,7 @@
        "0x000000000000007f"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 115,
    "id": "00d828b0-a354-4f36-87b6-730c53731449",
    "metadata": {},
    "outputs": [
@@ -829,7 +836,7 @@
       " [4] Int8(x::Int64)",
       "   @ Core .\\boot.jl:749",
       " [5] top-level scope",
-      "   @ In[34]:2",
+      "   @ In[115]:3",
       " [6] eval",
       "   @ .\\boot.jl:360 [inlined]",
       " [7] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -839,12 +846,13 @@
    ],
    "source": [
     "# Converter um inteiro que não pode ser representado em 8 bits\n",
+    "# Algo que não vai funcionar\n",
     "Int8(234)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 116,
    "id": "94193612-5f6b-4cf5-9a86-9e7c971db2dc",
    "metadata": {},
    "outputs": [
@@ -854,19 +862,20 @@
        "-22"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Porém se usarmos o módulo, vai funcionar MAS o nosso valor vai ser alterado devido à truncação de bits\n",
+    "# Porém se usarmos o módulo, vai funcionar MAS \n",
+    "# o nosso valor vai ser alterado devido à truncação de bits\n",
     "234 % Int8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 117,
    "id": "fdcdac37-3570-48ae-9cbe-ca77f862512f",
    "metadata": {},
    "outputs": [
@@ -876,7 +885,7 @@
        "0x0d"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,24 +904,24 @@
     "\n",
     "Assim como na parte de precedências, deixo [aqui](https://docs.julialang.org/en/v1/manual/mathematical-operations/#Rounding-functions) o link para o começo das diferentes listas de funções.\n",
     "\n",
-    "Vou citar algumas porque achei-as interessantes:\n",
+    "Vou citar algumas, porque achei-as interessantes:\n",
     "\n",
-    "* Tem o `floor(T, x)` para arrendondar para baixo (-Inf) e pode levar o `Type` para converter\n",
-    "* Tem o `ceil(T, x)` para arrendondar para cima (Inf) e pode levar o `Type` para converter\n",
-    "* O `trunc(T, x)` arredonda no formato \"mais comum\" ( direção a 0) e também pode converter para o `Type` que quisermos\n",
+    "* Tem o `floor(T, x)` para arrendondar para baixo (-Inf) e caso leve o  `Type`, o valor `x` será convertido para esse tipo\n",
+    "* Tem o `ceil(T, x)` para arrendondar para cima (Inf) e caso leve o  `Type`, o valor `x` será convertido para esse tipo\n",
+    "* O `trunc(T, x)` arredonda no formato \"mais comum\" ( em direção a $0$) e também pode converter para o `x` para o `Type` que passarmos\n",
     "\n",
     "\n",
-    "* Podemos dividir 2 valores e aplicar diretamente o `floor` ou o `ceil`, com as funções `fld(x,y)` e `cld(x,y)`.\n",
+    "* Podemos dividir $2$ valores e aplicar diretamente o `floor` ou o `ceil`, com as funções `fld(x,y)` e `cld(x,y)`.\n",
     "* Tem o `div(x,y)` que faz a divisão entre 2 valores (arredonda em direção a zero).\n",
     "* Temos o `rem(x,y)` que dá o nosso resto (podemos utilizar a sintaxe padrão `x % y`).\n",
     "* O `gcd(x,y,...)` retorna o máximo divisor comum dos argumentos.\n",
     "* O `lcm(x,y,...)` retorna o mínimo múltiplo comum dos argumentos.\n",
     "\n",
-    "* O `sign(x)` retona -1 se x é negativo, 1 se x é positivo e 0 caso x seja 0.\n",
-    "* Já o `signbit(x)` retorna `true` caso o bit de sinal seja 1 (ou seja, se x for negativo), se não retorna `false`.\n",
+    "* O `sign(x)` retona $-1$ se x é negativo, $1$ se x é positivo e $0$ caso `x` seja $0$.\n",
+    "* Já o `signbit(x)` retorna `true` caso o bit de sinal seja $1$ (ou seja, se `x` for negativo), se não retorna `false`.\n",
     "\n",
     "\n",
-    "* Tem a função exponencial (`exp(x)`), logarítmo nas diferentes bases(`log(x)` = ln, `log10(x)` = log base 10, `log2(x)` = log base 2).\n",
+    "* Tem a função exponencial (`exp(x)`) e logarítmo nas diferentes bases(`log(x)` = ln, `log10(x)` = log base 10, `log2(x)` = log base 2).\n",
     "\n",
     "***Nota: Quando precisarem de calcular logaritmos e/ou algo com a função exponencial, onde os vossos valores são extremamente pequenos, usem `expm1` e `log1p`. Caso precisem de calcular hipotenusas onde os valores dos lados do triângulo são muito grandes usem `hypot`. Se seguirem a documentação são referenciados estes 2 pequenos artigos que explicam o porquê:***\n",
     "\n",
