--- a/notebooks/Variáveis.ipynb
+++ b/notebooks/Variáveis.ipynb
@@ -2,18 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6581da9f-ec75-48e3-a85e-825a4d90b47d",
-   "metadata": {},
-   "source": [
-    "# Julia Lang\n",
-    "\n",
-    "Vou apontar tudo que ache importante para aprender e dominar um pouco da linguagem Julia!\n",
-    "\n",
-    "Tudo o que for aqui apontado, vem do site https://docs.julialang.org/en/v1/, mais especificamente, do Manual da linguagem."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "71351131-2387-4002-b7db-af2e030a0724",
    "metadata": {},
    "source": [
@@ -21,12 +9,12 @@
     "\n",
     "***DISCLAIMER: Este notebook foi escrito com base no que li [neste](https://docs.julialang.org/en/v1/manual/variables/) capítulo do manual***\n",
     "\n",
-    "Assim como no Python podemos armazenar valores em variáveis"
+    "Assim como no Python, podemos armazenar valores em variáveis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "caa2c84b-6d99-4251-a5b7-f8cc870c0eea",
    "metadata": {},
    "outputs": [
@@ -36,7 +24,7 @@
        "10"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,13 +40,13 @@
    "source": [
     "A parte mais interessante é que podemos definir variáveis com Unicode e LaTex. \n",
     "\n",
-    "Para criar nomes de variáveis com LaTeX, usamos o caractere \"\\\\\", seguido do nome do caractere, seguido de um TAB.\n",
+    "Para criar nomes de variáveis com LaTeX, usamos o caracter \"\\\\\", seguido do nome do caractere, seguido de um TAB.\n",
     "Por exemplo, o delta seria: ***\\delta + TAB*** = $\\delta$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "10011d74-132b-41f0-930d-de264dd8f567",
    "metadata": {},
    "outputs": [
@@ -68,7 +56,7 @@
        "0.05"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "97fab4d4-6db3-4a50-b556-9a5205d744ce",
    "metadata": {},
    "outputs": [
@@ -98,7 +86,7 @@
        "2.3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +100,10 @@
    "id": "e0bf4713-4c56-42c4-a7ce-29bcdd0f462c",
    "metadata": {},
    "source": [
-    "***Atenção***: Não é aconselhável fazer isto! E caso eu usasse a constante $\\pi$ e depois tentasse redifini-la, ia dar um erro."
+    "***Atenção*** &#8595; \n",
+    "<hr>\n",
+    "Não é aconselhável fazer isto! E caso eu usasse a constante $\\pi$, com o valor padrão dele, e depois tentasse redifini-la, ia dar um erro.\n",
+    "<hr>"
    ]
   },
   {
@@ -124,12 +115,12 @@
     "\n",
     "Ao contrário da grande parte das linguagens, Julia permite-nos definir as variáveis como bem entendermos, sendo a principal restrição o uso de nomes de palavras reservadas, como: *else*, *for* etc.\n",
     "\n",
-    "Também é possível definir operadores como funções específicas, por exemplo, o nosso método `sum` pode ser associado à variável $\\Sigma$."
+    "Também é possível definir símbolos como funções específicas, por exemplo, o nosso método `sum` pode ser associado à variável $\\Sigma$ (sigma maiúsculo)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "4a512bea-ca17-4582-90eb-09d9eb3064b9",
    "metadata": {},
    "outputs": [
@@ -139,7 +130,7 @@
        "15"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "4f6073d9-9a60-47ce-ba2b-880ab557f8bb",
    "metadata": {},
    "outputs": [
@@ -170,7 +161,7 @@
        "225"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +177,7 @@
    "id": "c06bf1f9-81fa-43ec-aa8f-f852865716df",
    "metadata": {},
    "source": [
-    "\"Com grande poder vem grande responsabilidade\", levando isso em consideração quando fazemos cálculos é sempre bom deixar um espaço entre operadores e variáveis, para que Julia não pense que estamos a chamar uma variável, cujo nome é a junção do operador e do nome que definimos a variável, por exemplo: `+var`.\n",
+    "**\"Com grande poder vem grande responsabilidade\"**, levando isso em consideração quando fazemos cálculos é sempre bom deixar um espaço entre operadores e variáveis, para que Julia não pense que estamos a chamar uma variável, cujo nome é a junção do operador e do nome que definimos a variável, por exemplo: `+var`.\n",
     "\n",
     "Resumo:\n",
     "***Deixar sempre espaços entre operadores e variáveis***"
@@ -201,17 +192,17 @@
     "\n",
     "Linguagens tendem a ter convenções para a nomenclatura de variáveis, funções e classes ... (esqueçam classes em Julia).\n",
     "\n",
-    "Aqui vão as convenções citada na [documentação](https://docs.julialang.org/en/v1/manual/variables/):\n",
+    "Aqui vão as convenções citadas na [documentação](https://docs.julialang.org/en/v1/manual/variables/):\n",
     "\n",
     "* Nomes de variáveis em minúsculas\n",
     "\n",
-    "* Para separar palavras em nomes de variáveis, fazemos uso de underscores ('\\_'), mas é desencorajado o seu uso, a menos que o nome seja tão chato de ler que fique melhor utilizando '_'\n",
+    "* Para separar palavras em nomes de variáveis, fazemos uso de underscores `_`, mas é desencorajado a sua utilização, a menos que o nome seja tão chato de ler que fique melhor utilizando `_`\n",
     "\n",
-    "* Nomes de *Types* e *Modules* começam com letra maiúscula e a separação de palavras é feita com um \"semi-camelCase\" (LetraMaiusculaEmCadaPalavra)\n",
+    "* Nomes de *Types* e *Modules* começam com letra maiúscula e a separação de palavras é feita com letra maiúscula em cada palavra (LetraMaiusculaEmCadaPalavra)\n",
     "\n",
-    "* Nomes de *functions* e *macros* são em minúsculas e sem underscores ('_')\n",
+    "* Nomes de *functions* e *macros* são em minúsculas e sem underscores `_`\n",
     "\n",
-    "* Quando funções têm um '!' no fim do nome, siginifica que elas modificam os argumentos diretamente, não necessitando de retornar algo. Equivalente ao parâmetro `inplace` nos métodos da biblioteca Pandas."
+    "* Quando funções têm um `!` no fim do nome, siginifica que elas modificam os argumentos diretamente, não necessitando de retornar algo. Equivalente ao parâmetro `inplace` nos métodos da biblioteca Pandas."
    ]
   }
  ],
