--- a/notebooks/[7] Controlo de fluxo.ipynb
+++ b/notebooks/[7] Controlo de fluxo.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "3eafbb9e-4181-4ae5-83d5-5d88d24b79a9",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
        "2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a17aa357-765b-437f-a6d4-3ab296444536",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "2"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "2ca41b1c-1a13-49ce-8f32-68ff5ad8905a",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Apanhar sol na varanda, porque estamos num meio de uma pandemia e não podemos sair de casa!!!!\n"
+      "Apanhar sol na varanda, porque estamos no meio de uma pandemia e não podemos sair de casa!!!!\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c07995a4-e3ed-4fc3-9442-130d5863f596",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
        "\"Apanhar sol na varanda, porque estamos no meio de uma pandemia e não podemos sair de casa!!!!\""
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "498bc83e-d631-4f62-8ab3-131471d726e3",
    "metadata": {},
    "outputs": [
@@ -229,12 +229,6 @@
     "\n",
     "<hr>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aee045d1-b7ef-43ab-bd01-dfdffe3e849c",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
